v2: partie admin + début admin games